# povideo

./: .gitignore  README.md  setup.cfg
app/: README.md
app/backend/: trans_view.py
demo/: txt2mp3.py  video2mp3.py  video4mark.py  录音转文字.py
dev/: 1、文字转语音.py  2、给视频加水印.py  video2txt.py
povideo/: __init__.py
povideo/api/: video.py
povideo/core/: VideoType.py
povideo/lib/tencent/: audio2txt_service.py
script/: clean.sh
tests/: __init__.py  test_video.py
