[metadata]
name = povideo
version = 0.0.4
description = pip install povideo
long_description = file: README.md
long_description_content_type = text/markdown
url = http://python-office.com/
author = CoderWanFeng
author_email = 1957875073@qq.com
license = MIT
license_file = LICENSE
platforms = any

project_urls =
    Bug Tracker = https://github.com/CoderWanFeng/povideo/issues
    Documentation = https://github.com/CoderWanFeng/povideo/blob/master/README.md
    Source Code = https://github.com/CoderWanFeng/povideo

[options]
packages = find:
install_requires =
    moviepy
    tencentcloud-sdk-python

python_requires = >=3.8
include_package_data = True
zip_safe = False

